apps/auth-db/authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-auth-db
  namespace: zt-auth-db
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - zt-auth
